; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/lpfc/extr_lpfc_mem.c___lpfc_mbuf_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/lpfc/extr_lpfc_mem.c___lpfc_mbuf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpfc_hba = type { i32, %struct.lpfc_dma_pool }
%struct.lpfc_dma_pool = type { i64, i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__lpfc_mbuf_free(%struct.lpfc_hba* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.lpfc_hba*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.lpfc_dma_pool*, align 8
  store %struct.lpfc_hba* %0, %struct.lpfc_hba** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.lpfc_hba*, %struct.lpfc_hba** %4, align 8
  %9 = getelementptr inbounds %struct.lpfc_hba, %struct.lpfc_hba* %8, i32 0, i32 1
  store %struct.lpfc_dma_pool* %9, %struct.lpfc_dma_pool** %7, align 8
  %10 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %11 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %14 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp ult i64 %12, %15
  br i1 %16, label %17, label %40

17:                                               ; preds = %3
  %18 = load i8*, i8** %5, align 8
  %19 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %20 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %19, i32 0, i32 2
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %23 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  store i8* %18, i8** %26, align 8
  %27 = load i32, i32* %6, align 4
  %28 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %29 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %28, i32 0, i32 2
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %32 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  store i32 %27, i32* %35, align 8
  %36 = load %struct.lpfc_dma_pool*, %struct.lpfc_dma_pool** %7, align 8
  %37 = getelementptr inbounds %struct.lpfc_dma_pool, %struct.lpfc_dma_pool* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %37, align 8
  br label %47

40:                                               ; preds = %3
  %41 = load %struct.lpfc_hba*, %struct.lpfc_hba** %4, align 8
  %42 = getelementptr inbounds %struct.lpfc_hba, %struct.lpfc_hba* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i8*, i8** %5, align 8
  %45 = load i32, i32* %6, align 4
  %46 = call i32 @pci_pool_free(i32 %43, i8* %44, i32 %45)
  br label %47

47:                                               ; preds = %40, %17
  ret void
}

declare dso_local i32 @pci_pool_free(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
